# thesis_app

./: .env.sample  .gitignore  README.md  activate_env.sh  checks.sh  environment.yml  install_env.job  precommit.sh  pyproject.toml  thesis.yml
.github/: frontend-test.yml
.github/workflows/: backend-test.yml  experiments-test.yml  frontend-test.yml  terraform-test.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  checks.sh  config.py  dump_pilot.py  dump_pilot_all.py  jobRunner.py  launch_dev.py  launch_prod.sh  main.py  manageDB.py  pilot.py  pyproject.toml
backend/app/: database.py  deps.py  hardcoded.py  main.py  notifications.py  settings.py
backend/app/feedback/: README.md  __init__.py  gpt.py
backend/app/feedback_utils/: AbstractModel.py  __init__.py  golden_feedback.csv  prompts.py
backend/app/models/: Base.py  Course.py  User.py  __init__.py  base.py  course.py  course_partials.py  job.py  schemas.py  user.py
backend/app/routes/: attempts.py  auth.py  courses.py  files.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_04_08_2006-70ae49c487e8_init_db.py  2024_04_15_1702-f7eec83efc75_init_db.py  2024_04_18_1036-71cac1dd54ac_init_db.py  2024_04_18_1401-d0878fab613f_attempts_table.py  2024_05_04_1810-b5d6d7937f3b_add_user_name_sub.py  2024_05_06_1329-a1e2dc450abe_init_files.py  2024_05_06_1443-bec5a75fc99b_feedback_tables.py  2024_05_06_1504-fc3d1af927e8_feedback_tables.py  2024_05_13_1257-7605bcd2ff13_init_tables.py  2024_05_19_1615-1a3d194295b0_courseuserlink.py  2024_05_19_2215-4403fa76e1de_attemptfilelink.py  2024_05_25_1117-03d7881322c8_jobs_and_scorable_assignments.py  2024_05_30_1514-9e86599b9a80_add_group_num.py
backend/tests/: conftest.py  dummy.py  test.env  test_jobs.py  test_models.py  test_notifications.py
backend/tests/routes/: test_attempts.py  test_auth.py  test_courses.py  test_files.py
datasets/: download.sh
datasets/synthetic_smart/v2/: synthetic_smart_v2.csv  synthetic_smart_v2__feedback.csv
datasets/synthetic_smart/v3/: feedback_gpt-3.5-turbo-0125__judged_gpt-4-0125-preview.csv  feedback_gpt-4-0125-preview__judged_gpt-4-0125-preview.csv  smart_goals.config.json  smart_goals.csv  smart_goals.csv.output.json.bkp  smart_goals__feedback.config.json
datasets/synthetic_smart/v3/old/: .synthetic_smart.csv.output.json.bkp  smart_goals__feedback.csv  smart_goals__feedback__scores.csv
docker/: .env.sample  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  manage.sh
experiments/: .env.sample  README.md  benchmark.ipynb  benchmark.py  checks.sh  config.py  environment.yml  feedback.py  finetune_gemma.py  gemma.py  gpt.py  prompts.py  pyproject.toml  synthetic_smart.py
experiments/data/OSCAR/: download_oscar.py
experiments/data/alpaca_cleaned_nl/: .gitignore  README.md  manage.py  translate_utils.py
experiments/data/synthetic_smart/old/: synthetic_smart.csv
experiments/data/synthetic_smart/v3/: .feedback_gpt-3.5-turbo-0125.config.json
experiments/data/synthetic_smart/v3/promptflow/: feedback-generation-gpt-35-evaluate-feedback-gpt-4.csv  feedback-generation-gpt-4-evaluate-feedback-gpt-4.csv
experiments/data/synthetic_smart/v4/: benchmark_with_gpt-4-0125-preview.xlsx  feedback.xlsx  fluency_gpt-3.5-turbo-0125_judged_by_gpt-4-0125-preview.csv  fluency_gpt-4-0125-preview_judged_by_gpt-4-0125-preview.csv  smart_goals.csv
experiments/datasets/OSCAR/: download_oscar.py
experiments/datasets/alpaca_cleaned/: download_alpaca_cleaned.py
experiments/datasets/synthetic_smart/v3/: feedback_gpt-3.5-turbo-0125.csv
experiments/datasets/synthetic_smart/v3/promptflow/: feedback-generation-llama-evaluate-feedback-gpt-4.csv
experiments/datasets/synthetic_smart/v4/: smart_goals.config.json
experiments/deprecated/: benchmark.ipynb  finetune_gemma.py  llama2.py
experiments/jobs/: launch_jupyter.job  sleep.job  tuner.job
experiments/pilot_study/: README.md  levenshtein_dist.py  pilot_analysis.py  word_counts.ipynb
experiments/prompts/: __init__.py  english.py  fluency_score.jinja2  fluency_score_nl.jinja2  parsing.py
experiments/tests/: conftest.py  sample_dataset.jsonl  sample_deepl.txt  test_alpaca_cleaned_nl.py
experiments/tuner/: .gitignore  README.md  generate.py  generation.yaml  generation_baseline.yaml  llama2_7B.sh  llama2_7B_qlora_single_device.yaml  plots.py  sync_snellius.sh
experiments/tuner/recipes/: generate.py  lora_finetune_single_device.py
frontend/: .dockerignore  Dockerfile  README.md  checks.sh  nx.json  package.json
frontend/apps/frontend/: project.json  rspack.config.js  rspack.config.ts
frontend/apps/frontend-e2e/: playwright.config.ts
frontend/apps/frontend/src/: constants.ts  index.html  main.tsx  models.ts  providers.ts  theme.tsx  utils.ts
frontend/apps/frontend/src/api/: common.ts  courses.ts  index.ts
frontend/apps/frontend/src/components/: Assignment.tsx  AssignmentStatus.tsx  Files.tsx  (+12 more)
frontend/nginx/: Dockerfile  thesis.conf.template
jobs/: install_env.job  sleep.job  tuner.job
model/: AbstractModel.py  README.md  benchmark.ipynb  benchmark.py  config.py  feedback.ipynb  feedback.py  finetune_gemma.py  gemma.py  gpt.py  llama2.py  pr_utils.py  prompts.py  synthetic_feedback.py  synthetic_smart.ipynb  synthetic_smart.py
model/tests/: test_prompts.py
terraform/: README.md
terraform/instances/DEV/: .terraform.lock.hcl  main.tf  terraform.tfvars.sample
terraform/instances/PRD/: main.tf
terraform/instances/common/: main.tf  terraform.tfvars.sample
terraform/instances/common/email-templates/: feedback-available.html
terraform/instances/common/ses-templates/: feedback-available.html
terraform/load_testing/: locustfile.py
terraform/modules/auth0-tenant/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  setup.sh  variables.tf
tests/: test_prompts.py
(+9 files in other folders)
