[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel Engbert <d.engbert@student.vu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
mypy = "^1.9.0"
types-psycopg2 = "^2.9.21.20240311"
# httpx needed for fastapi.testclient
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore-init-module-imports = true
ignore = ["E712", "F401"]