[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel Engbert <d.engbert@student.vu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
authlib = "^1.3.0"
# needed by starlettte cors
itsdangerous = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
python-multipart = "^0.0.9"
gunicorn = "^22.0.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
mypy = "^1.9.0"
types-psycopg2 = "^2.9.21.20240311"
# httpx needed for fastapi.testclient
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore-init-module-imports = true
ignore = ["E712", "F401"]

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true
follow_imports = "skip"